# data-fetching-api

./: pyproject.toml
data_api/: main.py
