[tool.poetry]
name = "data-api"
version = "0.1.0"
description = ""
authors = ["SYED RAZA ALI <itsrazaalishah303@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pymongo = "^4.6.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
